fixtures/invalid/bad-nav-body.mu
@nav label="Docs" href="index.html"
Nav blocks are bodyless.
